--- a/rcpp.Rmd
+++ b/rcpp.Rmd
@@ -1,31 +1,22 @@
 ---
-title: C++ with Rcpp
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-library(wolfr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
 
+## C++ with Rcpp
 
-# Basics
+### Basics
 
 For this section you will need the Rcpp and the microbenchmark packages.
 
@@ -33,6 +24,10 @@ For this section you will need the Rcpp and the microbenchmark packages.
 library(Rcpp)
 library(microbenchmark)
 ```
+
+You might also have to install Rtools from [https://cran.r-project.org/bin/windows/Rtools/](https://cran.r-project.org/bin/windows/Rtools/) for Windows.
+
+C++ is probably the most widely used general programming language today. Actually, about half the code of base R is written in C++! (the rest is about half and half R and Fortran)
 
 Sometimes when you have some code that takes a while to run it is worthwhile to spend some time speeding it up. One way to do this is to rewrite part of the code in C++.
 
@@ -52,17 +47,17 @@ Let's see how long this takes:
 ```{r cache=TRUE}
 x <- rnorm(1e6)
 y <- rnorm(1e6)
-summary(microbenchmark(dist1(x, y)))["mean"]
+microbenchmark(dist1(x, y))
 ```
+
 Now of course we can immediately speed things up by vectorizing the routine:
  
 ```{r cache=TRUE}
 dist2 <- function(x, y) {
   sqrt(x^2+y^2)
 }
-tmpR <- round(
-  summary(microbenchmark(dist2(x, y)))["mean"], 1)
-tmpR
+mb <- microbenchmark(dist1(x, y), dist2(x,y))
+round(as.numeric(summary(mb)[, "median"]), 2)
 ```
 
 Can we do even better?  
@@ -80,12 +75,15 @@ NumericVector dist3(NumericVector x, NumericVector y) {
 ```
 
 ```{r}
-summary(microbenchmark(dist3(x, y)))["mean"]
+mb <- microbenchmark(dist1(x, y), dist2(x,y), dist3(x,y))
+round(as.numeric(summary(mb)[, "median"]), 2)
 ```
 
-Notice that the above chunk starts like this:
+Note: in the R markdown document the above chunk starts like this:
 
 \```{r engine='Rcpp'}
+
+this tells R markdown to treat this chunk as Rcpp code and compile it accordingly.
 
 Actually, we can even do better than that:
 
@@ -101,35 +99,84 @@ NumericVector dist4(NumericVector x, NumericVector y) {
 ```
 
 ```{r}
-tmpRcpp <- round(
-  summary(microbenchmark(dist4(x, y)))["mean"], 1)
-tmpRcpp
+mb <- microbenchmark(dist3(x, y), dist4(x,y))
+round(as.numeric(summary(mb)[, "median"]), 2)
 ```
 
 Those of you who already know a bit of C++ are going to be quite amazed, because this is not even C++, it is sort of "vectorized" C++!
 
 `r hl()$hr()`
 
-Now the difference between `r tmpRcpp` and `r tmpR`  milliseconds (the fastest non-C++ time) might not seem like much, but imagine if we had to run this routine one million times, then the R routine would take `r tmpR` $*10^{-3}\times 10^6/3600=$ `r round(tmpR*10^{-3}*10^6/3600,1)` hours, but the Cpp routine takes only `r round(tmpRcpp*10^{-3}*10^6/3600, 1)` hours. Writing it takes literally 1 minute! (assuming you know how)  
 
 To start let's discuss a few differences between R and C++ syntax:
 
--  in C++ every variable has to be explicitely defined.  
--  in C++ (almost) every line ends in ;  
+-  in C++ every variable has to be explicitly defined.  
+the most common data types are *int*, *double*, *char* and *bool*. 
+
+-  in C++ (almost) every line ends with a ;  
 -  vectors start with index 0, not 1  
--  the for loop is for(int i=0;i<n;++i)
+-  the for loop is for(int i=0; i<n; ++i)  
+-  the repeat loop is called a *do* loop and has the format
 
-Moreover, to be linked to R the C++ routine has to start with
+```{r eval=FALSE}
+do {
+# do stuff  
+} while( condition );
+```
 
-\# include <Rcpp.h>  
-using namespace Rcpp;  
-// [[Rcpp::export]]  
+- whereas R does a lot of type conversion, C++ does none. This can lead to occasional strange behavior:
+
+```{r engine='Rcpp'}
+# include <Rcpp.h>
+using namespace Rcpp;
+// [[Rcpp::export]]
+double mydiv(int n, int m) {
+  return n/m;
+}
+```
+
+```{r}
+mydiv(5, 2)
+```
+
+so the result is 2, not 2.5. The reason is that when we divide two integers, in C++ the result is always an integer.
+
+To get the correct result we need to do the type conversion ourselves:
+
+
+```{r engine='Rcpp'}
+# include <Rcpp.h>
+using namespace Rcpp;
+// [[Rcpp::export]]
+double mydiv(int n, int m) {
+  return n/double(m);
+}
+```
+
+```{r}
+mydiv(5, 2)
+```
+
+
+`r hl()$hr()`
+
+To be linked to R the C++ routine has to start with with these lines:
+
+```{r, eval=FALSE}
+# include <Rcpp.h>
+using namespace Rcpp;
+// [[Rcpp::export]]
+
+}
+```
+
 
 The easiest way to get started is to just use RStudio - File - New File - C++ File.
 
-There are some special variable types you need to use when moving data from R to C++ and back. The most important is the one used in our programs above: NumericVector. It is just what it says it is.
 
-# Debugging
+If the C++ routine takes as its argument a single value it can be defined in the usual C++ way, as in the *mydiv* routine. If we want to use a vector as an argument or the return object we need to use a special variable type called  NumericVector. It is just what it says it is.
+
+### Debugging
 
 Generally you should only turn fairly short code into C++, so debugging is not to big a problem. However, on occasion you might want to add a print statement to your code, so you can find out where it fails. here is how:
 
@@ -152,9 +199,13 @@ NumericVector dist5(NumericVector x, NumericVector y) {
 dist5(x[1:5], y[1:5])
 ```
 
-## Sugar
+### Sugar
 
-Not only is Rcpp vectorized, many standard R functions have been ported to Rcpp. For example, say we want to write a routine that simulates Brownian motion in $R^2$. That is, a stochastic process that moves as follows: if at time $t$ it is at $(x_0, y_0)$, then at time $t+\delta$ it is at $(x_0+\delta X, y_0+\delta Y)$ where $X,Y\sim N(0, 1)$.
+Not only is Rcpp vectorized, many standard R functions have been ported to Rcpp. 
+
+#### **Example**
+
+We want to write a routine that simulates **Brownian motion** in $R^2$. That is, a stochastic process that moves as follows: if at time $t$ it is at $(x_0, y_0)$, then at time $t+\delta$ it is at $(x_0+\delta X, y_0+\delta Y)$ where $X,Y\sim N(0, 1)$.
 
 Note: generating stochastic process can be quite slow in R because they are difficult to vectorize, with one step of a loop depending on the previous one.
 
@@ -188,50 +239,10 @@ Notice the term *rnorm(1)[0]*, a little different from the standard R usage.
 
 Anyone (like me!) who ever had to write a routine in C++ and needed a simple routine like rnorm which does not exist in C++ will find this very sweet! And that is why it is called sugar!
 
-## STD (standard template library)
 
-The standard template library (STL) provides a set of extremely useful data structures and algorithms. 
+#### **Example (Fibonacci Numbers and the Golden Ratio)
 
-Let's start with a simple C++ implementation of the R *sum* function:
-
-
-```{r engine='Rcpp'}
-# include <Rcpp.h>
-using namespace Rcpp;
-// [[Rcpp::export]]
-double sum_cpp(NumericVector x) {
- double total = 0.0;
- for(int i=0; i<x.length(); ++i) total +=x(i);
- return total;
-}
-```
-
-```{r}
-sum(x)
-sum_cpp(x)
-```
-
-Notice the term *total+=x(i);* which is standard C++ shorthand for *total = total + x(i);*
-
-Now the same can be written as:
-
-```{r engine='Rcpp'}
-# include <Rcpp.h>
-using namespace Rcpp;
-// [[Rcpp::export]]
-double sum_cpp1(NumericVector x) {
- double total=0.0;
- NumericVector::iterator it;
- for(it=x.begin(); it!=x.end(); ++it) total += *it;
- return total;
-}
-```
-
-```{r}
-sum_cpp1(x)
-```
-
-*Example* let's write a routine that calculates the golden ratio via the Fibonacci numbers. First, these are defined by
+let's write a routine that calculates the golden ratio via the Fibonacci numbers. First, these are defined by
 
 $$
 \begin{aligned}
@@ -279,10 +290,9 @@ and now for the golden ratio:
 golden_ratio <- function(n, fun) {
  fun(n)/fun(n-1)
 }
-summary(microbenchmark(golden_ratio(10, 
-                      fun=fibR)))["mean"]
-summary(microbenchmark(golden_ratio(10,
-                       fun=fib_cpp)))["mean"]
+mb <- microbenchmark(golden_ratio(10, fun=fibR), 
+                     golden_ratio(10, fun=fib_cpp))
+round(as.numeric(summary(mb)[, "median"]), 2)
 ```
 
 not only is the cpp version much faster, in this example R is actually quite useless: while it does recursion, doing it to often quickly becomes a problem (because of memory issues). 
@@ -295,7 +305,7 @@ golden_ratio(30, fun=fib_cpp)
 
 The actual value of the golden ratio is of course $\frac{1+\sqrt{5}}2 =1.618..$.
 
-## Using C++ routines. 
+### Using existing C++ routines. 
 
 So far we used C++ to speed up calculations, and we could use Sugar to call standard R functions in the C++ routine. There is another use, though. C++ has been the main computing language in many fields for a long time, and so there exist a large number of excellent routines already written. Say you found one of these and want to use it in your R program. Here is how:
 
@@ -307,7 +317,6 @@ using namespace Rcpp;
 
 //function declaration
 double sum_of_squares(double x[], int n);
-
 
 // [[Rcpp::export]]
 double sub_routine(NumericVector x) {
@@ -321,7 +330,7 @@ double sub_routine(NumericVector x) {
 
 double sum_of_squares (double x[], int n)
 {
-  double r;
+  double r=0.0;
   for(int i=0;i<n;++i) r+=x[i]*x[i];
   return r;
 }
@@ -332,3 +341,60 @@ sub_routine(1:10)
 ```
 
 The *sum_of_squares* routine is pure C++, like any you might find on the web!
+
+**Exercise**
+
+Say we have a vector of numbers $(x_1,.,,x_n)$ and we want to find the k-means, that is $\frac1{k}\sum_{i=j}^{i=j+k-1} x_i$. Here is a routine in R:
+
+```{r}
+kmeans <- function(x, k){
+  n <- length(x)
+  y <- rep(0, n-k+1)
+  for(i in 1:(n-k+1))
+    y[i] <- mean(x[i:(i+k-1)])
+  y
+}
+```
+
+Rewrite the routine as C++ and compare the speeds on 
+
+```{r}
+set.seed(111)
+x <- rnorm(1e5)
+```
+
+and k=5
+
+Let's write this with Rcpp:
+
+```{r engine='Rcpp', echo=FALSE}
+# include <Rcpp.h>
+using namespace Rcpp;
+// [[Rcpp::export]]
+NumericVector kmeans_cpp(NumericVector x, int k) {
+ int n=x.length();
+ double tmp;  
+ NumericVector y(n-k+1);
+ for(int i=0; i<n-k+1; ++i) {
+   tmp=0.0;
+   for(int j=i;j<i+k;++j) tmp+=x[j];
+   y[i]=tmp/k;
+ } 
+ return y;
+}
+```
+
+Let's check first that the two routine do the same job:
+
+```{r}
+rbind(kmeans(x[1:10], 5),
+kmeans_cpp(x[1:10], 5))
+```
+
+and now 
+
+```{r}
+mb <- microbenchmark(kmeans(x, 5), kmeans_cpp(x, 5))
+round(as.numeric(summary(mb)[, "median"]), 2)
+```
+
