--- a/writing.functions.Rmd
+++ b/writing.functions.Rmd
@@ -303,7 +303,8 @@ f <- function(x) {
   else y <- NA
   y
 }
-f(c(2, -2))
+f(2)
+f(-2)
 ```
 
 A useful variation on the *if* statement is *switch*:
@@ -430,3 +431,26 @@ repeat {
 k
 ```
 
+Useful functions for loops:
+
+-  *next* immediately jumps to the next iteration
+
+```{r}
+y <- rep(0, 10)
+for(i in 1:10) {
+  x <- round(runif(1, 1, 10))
+  if(x<6) next
+  y[i] <- x
+}
+y
+```
+
+-  *break* immediately terminates the loop
+
+```{r}
+for(i in 1:10) {
+  x <- round(runif(1, 1, 10))
+  cat(x," ")
+  if(x<3) break
+}
+```
